Fixes background on iPhone.

--- a/css/index.css
+++ b/css/index.css
@@ -7,7 +7,7 @@ body {
   background: url('../images/trianglify.svg') rgb(255, 255, 255);
   background-repeat: no-repeat;
   background-size: cover;
-  background-position: left top;
+  background-position: 20% 0%;
   background-attachment: fixed;
   font-family: Lato;
   font-weight: 300;
